@@ -5,3 +5,10 @@
 ## Documentation
 
 W.I.P
+
+
+Run args:
+
+```
+--add-exports=javafx.graphics/com.sun.prism=ALL-UNNAMED  --add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED  --add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED  --add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED  --add-exports=javafx.graphics/com.sun.scenario=ALL-UNNAMED  --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED  --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+```
